--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,12 @@ services:
       - app-network
     volumes:
       - ./app:/var/www
+    environment:
+      DB_PORT: ${POSTGRES_PORT}
+      DB_DATABASE: ${POSTGRES_DB}
+      DB_USERNAME: ${POSTGRES_USER}
+      DB_PASSWORD: ${POSTGRES_PASSWORD}
+      APP_URL: ${NGINX_HOST}
   nginx:
     image: nginx:alpine
     tty: true
@@ -17,8 +23,10 @@ services:
       - ./app:/var/www
       - ./nginx/conf.d/:/etc/nginx/conf.d/
     ports:
-      - "8080:80"
-      # - "443:443"
+      - "${NGINX_PORT}:80"
+    environment:
+      NGINX_HOST: ${NGINX_HOST}
+      NGINX_PORT: ${NGINX_PORT}
     networks:
       - app-network
   db:
@@ -26,13 +34,20 @@ services:
     volumes:
       - ./db_data:/var/lib/postgresql/data
     environment:
-      POSTGRES_PASSWORD: rootroot
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
     ports:
-      - "5432:5432"
+      - "${POSTGRES_PORT}:5432"
     networks:
       - app-network
   redis:
     image: redis:6.0.5
+    environment:
+      - REDIS_APPENDONLY=yes
+      - REDIS_APPENDFSYNC=always
+    volumes:
+      - ./redis_data:/data
 
 networks:
   app-network:
